--- a/Babylon/HomePAge/homepage.html
+++ b/Babylon/HomePAge/homepage.html
@@ -21,7 +21,7 @@
 <body>
 
 
-<a href="../Enter_Page/index.html">
+<a href="../index.html">
   <svg class="arrow" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
 width="48" height="48"
 viewBox="0 0 172 172"
