--- a/Babylon/Profile/index.html
+++ b/Babylon/Profile/index.html
@@ -18,7 +18,7 @@
   style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,172v-172h172v172z" fill="none"></path><g fill="#ffffff"><path d="M72.53383,101.2005c4.19967,-4.19967 45.967,-45.967 50.16667,-50.16667c8.39933,-8.39933 8.39933,-22.00883 0,-30.40817c-8.39933,-8.39933 -22.00883,-8.39933 -30.40817,0c-4.19967,4.19967 -45.967,45.967 -50.16667,50.16667c-8.39933,8.39933 -8.39933,22.00883 0,30.40817c8.39933,8.39933 22.016,8.39933 30.40817,0z" opacity="0.35"></path><path d="M42.13283,101.2005c4.19967,4.19967 45.967,45.967 50.16667,50.16667c8.39933,8.39933 22.00883,8.39933 30.40817,0c8.39933,-8.39933 8.39933,-22.00883 0,-30.40817c-4.19967,-4.19967 -45.967,-45.967 -50.16667,-50.16667c-8.39933,-8.39933 -22.00883,-8.39933 -30.40817,0c-8.39933,8.39933 -8.39933,22.016 0,30.40817z"></path></g></g></svg>
   </a>
 
-  <a href="../Enter_Page/index.html">
+  <a href="../index.html">
     <svg class="home" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
     width="42" height="42"
     viewBox="0 0 172 172"
