--- a/Babylon/Calendar/index.html
+++ b/Babylon/Calendar/index.html
@@ -23,7 +23,7 @@
   </a>
       </button>
       <button  class="header__btn header__btn--right" title="Add event">
-        <a href="../Enter_Page/index.html">
+        <a href="../index.html">
           <svg class="home" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
           width="28" height="28"
           viewBox="0 0 172 172"
